[package]
name = "touch-gitignore"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bui <michaelbui99@hotmail.com>"]
license = "MIT"
description = "Create .gitignore files based on GitHub's templates"
readme = "README.md"
keywords = ["cli", "gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
reqwest = { version = "0.11.20", features = ["blocking"] }
serde = {version = "1.0.188", features=["derive"] }
serde_json = "1.0.107"
